Actions
Bug #5739
closedmr_sas driver - noise reduction and output fix
Start date:
2015-03-23
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
The mr_sas driver produces console messages during boot and disk topology changes which are unnecessary.
NOTICE: map sync received, switched map_id to 1 NOTICE: LDMAP sync completed.
It also reports that it has detected an LSI 2208 chip whenever any chip supporting TBOLT is found. This includes the newer Invader and Fury chips. The specific chip version should be removed from the message.
I have an initial patch for this which I'll be sending to the developers' list for review this week.
Updated by Electric Monk over 7 years ago
- Status changed from In Progress to Closed
- % Done changed from 80 to 100
git commit ff38cf9dace20854665175f403992f83312463cf
commit ff38cf9dace20854665175f403992f83312463cf Author: Andy Fiddaman <omnios@citrus-it.net> Date: 2015-03-28T20:10:08.000Z 5739 mr_sas driver - noise reduction and output fix Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Dan McDonald <danmcd@omniti.com>
Actions